Tue Jan 19 13:24:02 UTC 2010  Olli Savia  <ops@iki.fi>

        * tests/Bug_2980_Regression_Test.cpp:
          Added missing #include <string.h>.

Mon Jan 18 17:57:47 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * ace/UUID.h:

          Included Auto_Ptr.h since it is not included by other included
          header files and in breaking builds if UUID.h is included before
          including another file that does include Auto_Ptr.h

Mon Jan 18 13:47:53 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/ace_for_tao.mpc: Added Message_Queue_NT.cpp in this file since
          it seems to be needed for the ACE_FOR_TAO subset.

Fri Jan 15 10:27:30 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Define __NO_INCLUDE_WARN__ before including param.h.
          Fixes compile warnings.

Fri Jan 15 10:22:06 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/Registry.cpp:
          Fixed g++ 4.x compile warning on MinGW.

Fri Jan 15 10:19:48 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-win32-common.h:
          Simplified setting of ACE_HAS_NONSTATIC_OBJECT_MANAGER.

Fri Jan 15 04:19:45 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue_T.cpp: Readded

          #if defined (ACE_HAS_WIN32_OVERLAPPED_IO)
          #include "ace/Message_Queue_NT.h"
          #endif /* ACE_HAS_WIN32_OVERLAPPED_IO */

          to fix a compile error on MinGW.  Thanks to Olli Savia
          <ops@iki.fi> for this fix.

Fri Jan 15 04:18:17 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue_NT.cpp: Added

          #include "ace/Message_Queue.h"

          to fix a compile error on MinGW.  Thanks to Olli Savia
          <ops@iki.fi> for this fix.

Fri Jan 15 04:17:06 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue.h: Once again removed

          #if defined (ACE_HAS_WIN32_OVERLAPPED_IO)