@@ -33,6 +33,7 @@ Buffer_Stream_Test
 Bug_1576_Regression_Test
 Bug_1890_Regression_Test
 Bug_2368_Regression_Test: ALL !DISABLED
+Bug_2434_Regression_Test: !FIXED_BUGS_ONLY
 Bug_2497_Regression_Test
 Bug_2540_Regression_Test
 #Bug_2609_Regression_Test: !ST !ACE_FOR_TAO
